--- a/views/productlines/index.ejs
+++ b/views/productlines/index.ejs
@@ -60,7 +60,7 @@
                                                 </td>
                                                 <td>
                                                     <a class="btn btn-success edit" href="/productlines/edit/<%=data[i].productCode%>">Edit</a>
-                                                    <a class="btn btn-danger edit" href="/productlines/delete/<%=data[i].productCode%>">Delete</a>
+                                                    <a class="btn btn-danger edit" href="/productlines/delete/<%=data[i].productLine%>">Delete</a>
                                                 </td>
                                             </tr>
                                             <% } %>
