--- a/views/productlines/index.ejs
+++ b/views/productlines/index.ejs
@@ -59,7 +59,7 @@
                                                     <%= data[i].image %>
                                                 </td>
                                                 <td>
-                                                    <a class="btn btn-success edit" href="/productlines/edit/<%=data[i].productCode%>">Edit</a>
+                                                    <a class="btn btn-success edit" href="/productlines/edit/<%=data[i].productLine%>">Edit</a>
                                                     <a class="btn btn-danger edit" href="/productlines/delete/<%=data[i].productLine%>">Delete</a>
                                                 </td>
                                             </tr>
